# hackerton

./: Dockerfile  GPIO_BUTTON_GUIDE.md  L298N_MOTOR_SETUP.md  L298N_TROUBLESHOOTING.md  README.md  SUMMARY.md  SYSTEM_FLOW.md  UPDATE_SUMMARY.md  USAGE_GUIDE.md  docker-run.sh  main.py  pyproject.toml
.github/workflows/: docker-build.yml
config/: config.yaml
examples/: calibrate_cameras.py  hand_tracking_demo.py  motor_control_demo.py  real_true_motor.py  vibration_motor_demo.py
modules/: __init__.py  gemini_agent.py  gemini_agent_multimodal.py  hand_tracker_3d.py  motor_controller.py  stereo_calibration.py  vibration_motor.py
