[project]
name = "hackerton"
version = "0.1.0"
description = "Raspberry Pi 5 Stereo Vision and Motor Control System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "picamera2>=0.3.0",
    "RPi.GPIO>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
]
